--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/dashboard.css">
     <link rel="icon" href="../assets/img/TriviaBoost-logo.svg" type="img/svg+xml">
-    <title>Dashboard</title>
+    <title>pupu</title>
 </head>
 <body>
    
